--- a/index.html
+++ b/index.html
@@ -104,18 +104,23 @@
     }).render('#paypal-button-container');
 
     function generateQRCode() {
-    const childInfo = formData.children.map((c, i) => `Child ${i+1}: ${c.name}, Age: ${c.age}, Team: ${c.team}`).join('\\n');
-    const qrData = `Parent: ${formData.parentName}\\nEmail: ${formData.parentEmail}\\nPhone: ${formData.parentPhone}\\n${childInfo}\\nTicket ID: ${formData.ticketId}`;
+    const childInfo = formData.children
+        .map((c, i) => `Child ${i + 1}: ${c.name}, Age: ${c.age}, Team: ${c.team}`)
+        .join('\n');
+
+    const qrData = `Parent: ${formData.parentName}
+Email: ${formData.parentEmail}
+Phone: ${formData.parentPhone}
+${childInfo}
+Ticket ID: ${formData.ticketId}`;
 
     QRCode.toDataURL(qrData, { width: 200 }, function (error, url) {
         if (error) return console.error(error);
 
         document.getElementById('qr-code').innerHTML = `<img src=\"${url}\" alt=\"QR Code Ticket\">`;
 
-        // Store the base64 image URL
         formData.qrImage = url;
-
-        sendTicketByEmail(); // Send email AFTER QR is generated
+        sendTicketByEmail();
     });
 }
 
