--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
     <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-    <script src="https://www.paypal.com/sdk/js?client-id=ASNXc-c_Ozu9IRC4ILp5oC6VOLz18amVlbYfVnKYA2kvJIBlQnoLUPP-Rdz4J_vyMD5toHUwg-OQH-OX&currency=USD"></script> <!-- Replace 'sb' with live Client ID -->
+    <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script> <!-- Replace 'sb' with live Client ID -->
     <style>
         body { font-family: Arial, sans-serif; max-width: 700px; margin: auto; padding: 20px; }
-        input, button { width: 100%; margin: 10px 0; padding: 10px; }
+        input, select, button, label { width: 100%; margin: 10px 0; padding: 10px; }
         #qr-code { margin-top: 20px; text-align: center; }
         .child-block { border: 1px solid #ccc; padding: 10px; margin-bottom: 10px; border-radius: 6px; }
     </style>
@@ -36,7 +36,7 @@
 <div id="qr-code"></div>
 
 <script>
-    emailjs.init("zlaflous@gmail.com");
+    emailjs.init("YOUR_EMAILJS_USER_ID");
 
     let formData = {};
     let children = [];
@@ -46,9 +46,16 @@
         const childBlock = document.createElement('div');
         childBlock.className = 'child-block';
         childBlock.innerHTML = `
-            <input type="text" placeholder="Child ${index + 1} Full Name" required>
-            <input type="number" placeholder="Child ${index + 1} Age" required>
-            <input type="text" placeholder="Child ${index + 1} Team Name (Optional)">
+            <input type="text" placeholder="Participant First Name" required>
+            <input type="text" placeholder="Participant Last Name" required>
+            <input type="date" placeholder="Date of Birth" required>
+            <select required>
+                <option value="">Select Gender</option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+            </select>
+            <input type="text" placeholder="Team Name (Optional)">
+            <label><input type="checkbox" required> I agree to the waiver and terms.</label>
         `;
         document.getElementById('children').appendChild(childBlock);
         children.push(childBlock);
@@ -64,11 +71,14 @@
 
         const childData = [];
         children.forEach(block => {
-            const inputs = block.querySelectorAll('input');
+            const inputs = block.querySelectorAll('input, select');
             childData.push({
-                name: inputs[0].value,
-                age: inputs[1].value,
-                team: inputs[2].value || 'N/A'
+                firstName: inputs[0].value,
+                lastName: inputs[1].value,
+                dob: inputs[2].value,
+                gender: inputs[3].value,
+                team: inputs[4].value || 'N/A',
+                waiver: inputs[5].checked
             });
         });
 
@@ -98,42 +108,46 @@
         onApprove: function(data, actions) {
             return actions.order.capture().then(function(details) {
                 generateQRCode();
-                sendTicketByEmail();
             });
         }
     }).render('#paypal-button-container');
 
     function generateQRCode() {
-    const childInfo = formData.children
-        .map((c, i) => `Child ${i + 1}: ${c.name}, ${c.age}, ${c.team}`)
-        .join(' | ');
+        const childInfo = formData.children
+            .map((c, i) => `Child ${i + 1}: ${c.firstName} ${c.lastName}, DOB: ${c.dob}, Gender: ${c.gender}, Team: ${c.team}`)
+            .join(' | ');
 
-    const qrData = `Parent: ${formData.parentName} | Email: ${formData.parentEmail} | Phone: ${formData.parentPhone} | ${childInfo} | Ticket ID: ${formData.ticketId}`;
+        const qrData = `Parent: ${formData.parentName} | Email: ${formData.parentEmail} | Phone: ${formData.parentPhone} | ${childInfo} | Ticket ID: ${formData.ticketId}`;
 
-    QRCode.toDataURL(qrData, { width: 200 }, function (error, url) {
-        if (error) return console.error(error);
-
-        document.getElementById('qr-code').innerHTML = `<img src="${url}" alt="QR Code Ticket">`;
-
-        formData.qrImage = url;
-        sendTicketByEmail();
-    });
-}
-
-
-    function sendTicketByEmail() {
-        const childSummary = formData.children.map((c, i) => `Child ${i+1}: ${c.name}, Age: ${c.age}, Team: ${c.team}`).join('\n');
-        emailjs.send("service_1en0k3n", "service_1en0k3n", {
-			name: formData.parentName,
-			email: formData.parentEmail,
-			phone: formData.parentPhone,
-			ticket_id: formData.ticketId,
-			children: formData.children.map((c, i) => `Child ${i+1}: ${c.name}, Age: ${c.age}, Team: ${c.team}`).join('\\n'),
-			qr_image: formData.qrImage
-})
+        QRCode.toDataURL(qrData, { width: 200 }, function (error, url) {
+            if (error) return console.error(error);
+            document.getElementById('qr-code').innerHTML = `<img src="${url}" alt="QR Code Ticket">`;
+            formData.qrImage = url;
+            sendTicketByEmail();
+        });
     }
 
-    // Auto add first participant
+    function sendTicketByEmail() {
+        const childSummary = formData.children
+            .map((c, i) => `Child ${i + 1}: ${c.firstName} ${c.lastName}, DOB: ${c.dob}, Gender: ${c.gender}, Team: ${c.team}`)
+            .join('\n');
+
+        emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", {
+            name: formData.parentName,
+            email: formData.parentEmail,
+            phone: formData.parentPhone,
+            ticket_id: formData.ticketId,
+            children: childSummary,
+            qr_image: formData.qrImage
+        }).then(function(response) {
+            alert('Registration complete! Check your email for your QR code ticket.');
+        }, function(error) {
+            console.error('FAILED...', error);
+            alert('Registration complete, but failed to send email.');
+        });
+    }
+
+    // Auto add one participant on load
     addParticipant();
 </script>
 
