--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="children"></div>
     <button type="button" onclick="addParticipant()">+ Add Participant</button>
 
-    <h4>Admission fee per participant(s): $<span id="totalAmount">0</span></h4>
+    <h4>Registration Fee: $<span id="totalAmount">0</span></h4>
     <button type="submit">Proceed to Payment</button>
 </form>
 
