--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         childBlock.innerHTML = `
             <input type="text" placeholder="Participant First Name" required>
             <input type="text" placeholder="Participant Last Name" required>
-            <input type="date" placeholder="Date of Birth" required>
+            <label for="dob">Date of Birth</label>
+            <input type="date" name="dob" required>
             <select required>
                 <option value="">Select Gender</option>
                 <option value="Male">Male</option>
