--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         childBlock.innerHTML = `
             <input type="text" placeholder="Participant First Name" required>
             <input type="text" placeholder="Participant Last Name" required>
-            <label for="dob">Date of Birth</label>
+            <label for="dob">Date of Birth <small>(MM/DD/YYYY)</small></label>
             <input type="date" name="dob" required>
             <select required>
                 <option value="">Select Gender</option>
