--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div style="text-align: center; margin-bottom: 20px;">
-  <img src="https://raw.githubusercontent.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/refs/heads/main/masar-logo.png" alt="MASAR Logo" style="width: 180px; max-width: 100%;">
+  <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true
+" alt="MASAR Logo" style="width: 180px; max-width: 100%;">
 </div>
 
     <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
