--- a/index.html
+++ b/index.html
@@ -1,169 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <div style="text-align: center; margin-bottom: 20px;">
-  <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true
-" alt="MASAR Logo" style="width: 180px; max-width: 100%;">
-</div>
-
-    <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
-    <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-    <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script> <!-- Replace 'sb' with live Client ID -->
-    <style>
-        body { font-family: Arial, sans-serif; max-width: 700px; margin: auto; padding: 20px; }
-        input, select, button, label, textarea { width: 100%; margin: 10px 0; padding: 10px; }
-        #qr-code { margin-top: 20px; text-align: center; }
-        .child-block { border: 1px solid #ccc; padding: 10px; margin-bottom: 10px; border-radius: 6px; }
-        .waiver-text { font-size: 14px; line-height: 1.6; background: #f9f9f9; padding: 10px; border-left: 4px solid #c1272d; margin-top: 10px; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
+  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f7f9fb;
+      padding: 30px;
+      margin: 0;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+    }
+    h2 {
+      text-align: center;
+      color: #1a3c6c;
+      margin-bottom: 10px;
+    }
+    input, select, button, label, textarea {
+      width: 100%;
+      margin-top: 10px;
+      padding: 12px;
+      font-size: 15px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+    button {
+      background-color: #1a3c6c;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background-color: #144078;
+    }
+    .child-block {
+      background-color: #f2f7fb;
+      padding: 20px;
+      border: 1px solid #d1e3f0;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+    .waiver-text {
+      font-size: 14px;
+      line-height: 1.6;
+      background: #fffaf0;
+      padding: 10px;
+      border-left: 4px solid #c1272d;
+      margin-top: 10px;
+    }
+    #qr-code {
+      margin-top: 30px;
+      text-align: center;
+    }
+    .logo {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .logo img {
+      width: 160px;
+    }
+    h4 {
+      margin-top: 20px;
+      color: #333;
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
+    <div class="logo">
+      <img src="https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO_NAME/main/masar-logo.png" alt="MASAR Logo">
+    </div>
+    <h2>Moroccan Youth Athletic Festival - Spring 2025</h2>
+    <form id="registration-form">
+      <h3>Parent Information</h3>
+      <input type="text" id="parentName" placeholder="Parent Full Name" required>
+      <input type="email" id="parentEmail" placeholder="Parent Email Address" required>
+      <input type="text" id="parentPhone" placeholder="Phone Number" required>
 
-<h2>Register for Moroccan Youth Athletic Festival - Spring 2025</h2>
+      <h3>Participants</h3>
+      <div id="children"></div>
+      <button type="button" onclick="addParticipant()">+ Add Participant</button>
 
-<form id="registration-form">
-    <h3>Parent Information</h3>
-    <input type="text" id="parentName" placeholder="Parent Full Name" required>
-    <input type="email" id="parentEmail" placeholder="Parent Email Address" required>
-    <input type="text" id="parentPhone" placeholder="Phone Number" required>
+      <h4>Total: $<span id="totalAmount">0</span></h4>
+      <button type="submit">Proceed to Payment</button>
+    </form>
 
-    <h3>Participants</h3>
-    <div id="children"></div>
-    <button type="button" onclick="addParticipant()">+ Add Participant</button>
+    <div id="paypal-button-container" style="display:none;"></div>
+    <div id="qr-code"></div>
+  </div>
 
-    <h4>Registration Fee: $<span id="totalAmount">0</span></h4>
-    <button type="submit">Proceed to Payment</button>
-</form>
-
-<div id="paypal-button-container" style="display:none;"></div>
-<div id="qr-code"></div>
-
-<script>
+  <script>
     emailjs.init("YOUR_EMAILJS_USER_ID");
 
     let formData = {};
     let children = [];
 
     function addParticipant() {
-        const index = children.length;
-        const childBlock = document.createElement('div');
-        childBlock.className = 'child-block';
-        childBlock.innerHTML = `
-            <input type="text" placeholder="Participant First Name" required>
-            <input type="text" placeholder="Participant Last Name" required>
-            <input type="text" placeholder="Date of Birth (MM/DD/YYYY)" pattern="\\d{2}/\\d{2}/\\d{4}" required>
-            <select required>
-                <option value="">Select Gender</option>
-                <option value="Male">Male</option>
-                <option value="Female">Female</option>
-            </select>
-            <select required>
-                <option value="">Select Soccer Level</option>
-                <option value="Recreational">Recreational</option>
-                <option value="Travel">Travel</option>
-            </select>
-            <div class="waiver-text">
-                I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival – Soccer Tournament. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
-            </div>
-            <label><input type="checkbox" required> I agree to the waiver and terms.</label>
-        `;
-        document.getElementById('children').appendChild(childBlock);
-        children.push(childBlock);
-        updateTotal();
+      const childBlock = document.createElement('div');
+      childBlock.className = 'child-block';
+      childBlock.innerHTML = `
+        <input type="text" placeholder="Participant First Name" required>
+        <input type="text" placeholder="Participant Last Name" required>
+        <input type="text" placeholder="Date of Birth (MM/DD/YYYY)" required>
+        <select required>
+          <option value="">Select Gender</option>
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
+          <option value="Other">Other</option>
+        </select>
+        <input type="text" placeholder="Team Name (Optional)">
+        <select required>
+          <option value="">Select Soccer Level</option>
+          <option value="Recreational">Recreational</option>
+          <option value="Travel">Travel</option>
+        </select>
+        <div class="waiver-text">
+          I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival – Soccer Tournament. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
+        </div>
+        <label><input type="checkbox" required> I agree to the waiver and terms.</label>
+      `;
+      document.getElementById('children').appendChild(childBlock);
+      children.push(childBlock);
+      updateTotal();
     }
 
     function updateTotal() {
-        document.getElementById('totalAmount').textContent = children.length * 10;
+      document.getElementById('totalAmount').textContent = children.length * 10;
     }
 
     document.getElementById('registration-form').addEventListener('submit', function(e) {
-        e.preventDefault();
+      e.preventDefault();
 
-        const childData = [];
-        children.forEach(block => {
-            const inputs = block.querySelectorAll('input, select');
-            childData.push({
-                firstName: inputs[0].value,
-                lastName: inputs[1].value,
-                dob: inputs[2].value,
-                gender: inputs[3].value,
-                team: inputs[4].value || 'N/A',
-                level: inputs[5].value,
-                waiver: inputs[6].checked
-            });
+      const childData = [];
+      children.forEach(block => {
+        const inputs = block.querySelectorAll('input, select');
+        childData.push({
+          firstName: inputs[0].value,
+          lastName: inputs[1].value,
+          dob: inputs[2].value,
+          gender: inputs[3].value,
+          team: inputs[4].value || 'N/A',
+          level: inputs[5].value,
+          waiver: inputs[6].checked
         });
+      });
 
-        formData = {
-            parentName: document.getElementById('parentName').value,
-            parentEmail: document.getElementById('parentEmail').value,
-            parentPhone: document.getElementById('parentPhone').value,
-            children: childData,
-            ticketId: 'TICKET-' + Date.now(),
-            total: children.length * 10
-        };
+      formData = {
+        parentName: document.getElementById('parentName').value,
+        parentEmail: document.getElementById('parentEmail').value,
+        parentPhone: document.getElementById('parentPhone').value,
+        children: childData,
+        ticketId: 'TICKET-' + Date.now(),
+        total: children.length * 10
+      };
 
-        document.getElementById('registration-form').style.display = 'none';
-        document.getElementById('paypal-button-container').style.display = 'block';
+      document.getElementById('registration-form').style.display = 'none';
+      document.getElementById('paypal-button-container').style.display = 'block';
     });
 
     paypal.Buttons({
-        createOrder: function(data, actions) {
-            return actions.order.create({
-                purchase_units: [{
-                    amount: { value: formData.total.toFixed(2) },
-                    payee: { email_address: 'ourmasar@gmail.com' },
-                    description: 'Moroccan Youth Athletic Festival - Spring 2025 Registration'
-                }]
-            });
-        },
-        onApprove: function(data, actions) {
-            return actions.order.capture().then(function(details) {
-                generateQRCode();
-            });
-        }
+      createOrder: function(data, actions) {
+        return actions.order.create({
+          purchase_units: [{
+            amount: { value: formData.total.toFixed(2) },
+            payee: { email_address: 'ourmasar@gmail.com' },
+            description: 'Moroccan Youth Athletic Festival - Spring 2025 Registration'
+          }]
+        });
+      },
+      onApprove: function(data, actions) {
+        return actions.order.capture().then(function(details) {
+          generateQRCode();
+        });
+      }
     }).render('#paypal-button-container');
 
     function generateQRCode() {
-        const childInfo = formData.children
-            .map((c, i) => `Child ${i + 1}: ${c.firstName} ${c.lastName}, DOB: ${c.dob}, Gender: ${c.gender}, Team: ${c.team}, Level: ${c.level}`)
-            .join(' | ');
+      const childInfo = formData.children
+        .map((c, i) => `Child ${i + 1}: ${c.firstName} ${c.lastName}, DOB: ${c.dob}, Gender: ${c.gender}, Team: ${c.team}, Level: ${c.level}`)
+        .join(' | ');
 
-        const qrData = `Parent: ${formData.parentName} | Email: ${formData.parentEmail} | Phone: ${formData.parentPhone} | ${childInfo} | Ticket ID: ${formData.ticketId}`;
+      const qrData = `Parent: ${formData.parentName} | Email: ${formData.parentEmail} | Phone: ${formData.parentPhone} | ${childInfo} | Ticket ID: ${formData.ticketId}`;
 
-        QRCode.toDataURL(qrData, { width: 200 }, function (error, url) {
-            if (error) return console.error(error);
-            document.getElementById('qr-code').innerHTML = `<img src="${url}" alt="QR Code Ticket">`;
-            formData.qrImage = url;
-            sendTicketByEmail();
-        });
+      QRCode.toDataURL(qrData, { width: 200 }, function (error, url) {
+        if (error) return console.error(error);
+        document.getElementById('qr-code').innerHTML = `<img src="${url}" alt="QR Code Ticket">`;
+        formData.qrImage = url;
+        sendTicketByEmail();
+      });
     }
 
     function sendTicketByEmail() {
-        const childSummary = formData.children
-            .map((c, i) => `Child ${i + 1}: ${c.firstName} ${c.lastName}, DOB: ${c.dob}, Gender: ${c.gender}, Team: ${c.team}, Level: ${c.level}`)
-            .join('\n');
+      const childSummary = formData.children
+        .map((c, i) => `Child ${i + 1}: ${c.firstName} ${c.lastName}, DOB: ${c.dob}, Gender: ${c.gender}, Team: ${c.team}, Level: ${c.level}`)
+        .join('\n');
 
-        emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", {
-            name: formData.parentName,
-            email: formData.parentEmail,
-            phone: formData.parentPhone,
-            ticket_id: formData.ticketId,
-            children: childSummary,
-            qr_image: formData.qrImage
-        }).then(function(response) {
-            alert('Registration complete! Check your email for your QR code ticket.');
-        }, function(error) {
-            console.error('FAILED...', error);
-            alert('Registration complete, but failed to send email.');
-        });
+      emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", {
+        name: formData.parentName,
+        email: formData.parentEmail,
+        phone: formData.parentPhone,
+        ticket_id: formData.ticketId,
+        children: childSummary,
+        qr_image: formData.qrImage
+      }).then(function(response) {
+        alert('Registration complete! Check your email for your QR code ticket.');
+      }, function(error) {
+        console.error('FAILED...', error);
+        alert('Registration complete, but failed to send email.');
+      });
     }
 
-    // Auto add one participant on load
     addParticipant();
-</script>
-
+  </script>
 </body>
 </html>
