--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script>
   <style>
+    :root {
+      --masar-red: #b03a2e;
+      --masar-blue: #007c91;
+      --masar-green: #007a57;
+      --masar-gold: #d89d38;
+      --light-bg: #f7f9fb;
+    }
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f7f9fb;
+      background-color: var(--light-bg);
       padding: 30px;
       margin: 0;
     }
@@ -21,10 +29,11 @@
       border-radius: 12px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
       padding: 30px;
+      border-top: 5px solid var(--masar-blue);
     }
     h2 {
       text-align: center;
-      color: #1a3c6c;
+      color: var(--masar-blue);
       margin-bottom: 10px;
     }
     input, select, button, label, textarea {
@@ -37,19 +46,20 @@
       box-sizing: border-box;
     }
     button {
-      background-color: #1a3c6c;
+      background-color: var(--masar-red);
       color: white;
       font-weight: bold;
       cursor: pointer;
       transition: background 0.3s ease;
     }
     button:hover {
-      background-color: #144078;
+      background-color: #8e2e23;
     }
     .child-block {
-      background-color: #f2f7fb;
+      background-color: #f3f6f8;
       padding: 20px;
-      border: 1px solid #d1e3f0;
+      border: 1px solid #ccdbe2;
+      border-left: 5px solid var(--masar-green);
       border-radius: 8px;
       margin-bottom: 20px;
     }
@@ -58,7 +68,7 @@
       line-height: 1.6;
       background: #fffaf0;
       padding: 10px;
-      border-left: 4px solid #c1272d;
+      border-left: 4px solid var(--masar-gold);
       margin-top: 10px;
     }
     #qr-code {
