--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <div style="text-align: center; margin-bottom: 20px;">
+  <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true
+  " alt="MASAR Logo" style="width: 180px; max-width: 100%;">
+  </div>
   <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -129,9 +133,7 @@
           <option value="">Select Gender</option>
           <option value="Male">Male</option>
           <option value="Female">Female</option>
-          <option value="Other">Other</option>
         </select>
-        <input type="text" placeholder="Team Name (Optional)">
         <select required>
           <option value="">Select Soccer Level</option>
           <option value="Recreational">Recreational</option>
