--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
   <div class="container">
     <div class="logo">
-      <img src="https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO_NAME/main/masar-logo.png" alt="MASAR Logo">
+      <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" style="width: 180px; max-width: 100%;">
     </div>
     <h2>Moroccan Youth Athletic Festival - Spring 2025</h2>
     <form id="registration-form">
