--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <option value="Travel">Travel</option>
         </select>
         <div class="waiver-text">
-          I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival – Soccer Tournament. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
+          I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
         </div>
         <div style="margin-top: 10px;">
   <label style="display: flex; align-items: center; gap: 8px; font-size: 14px;">
