--- a/index.html
+++ b/index.html
@@ -86,7 +86,27 @@
       margin-top: 20px;
       color: #333;
     }
-  </style>
+  
+    .remove-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: #ccc;
+      color: #333;
+      padding: 5px 10px;
+      font-size: 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .remove-btn:hover {
+      background: #999;
+    }
+    .child-block {
+      position: relative;
+    }
+    
+</style>
 </head>
 <body>
   <div class="container">
@@ -122,6 +142,7 @@
       const childBlock = document.createElement('div');
       childBlock.className = 'child-block';
       childBlock.innerHTML = `
+        <button type="button" class="remove-btn" onclick="removeParticipant(this)">Remove</button>` +
         <input type="text" placeholder="Participant First Name" required>
         <input type="text" placeholder="Participant Last Name" required>
         <input type="text" placeholder="Date of Birth (MM/DD/YYYY)" required>
@@ -236,6 +257,14 @@
     }
 
     addParticipant();
-  </script>
+  
+
+    function removeParticipant(button) {
+      const block = button.parentElement;
+      block.remove();
+      children = children.filter(item => item !== block);
+      updateTotal();
+    }
+    </script>
 </body>
 </html>
