--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ formData = {
         total: children.length * 10
       };
 
-      document.getElementById('registration-form').style.display = 'none';
-      document.getElementById('paypal-button-container').style.display = 'block';
+      // document.getElementById('registration-form').style.display = 'none';
+      // document.getElementById('paypal-button-container').style.display = 'block';
     });
 
     paypal.Buttons({
@@ -252,6 +252,8 @@ formData = {
     }
 
     addParticipant();
+    <button onclick="testGoogleSheets()">Test Google Sheets</button>
+
   </script>
 </body>
 </html>
