--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ formData = {
         total: children.length * 10
       };
 
-      // document.getElementById('registration-form').style.display = 'none';
-      // document.getElementById('paypal-button-container').style.display = 'block';
+      document.getElementById('registration-form').style.display = 'none';
+      document.getElementById('paypal-button-container').style.display = 'block';
     });
 
     paypal.Buttons({
@@ -250,10 +250,6 @@ formData = {
         alert('Registration complete, but failed to send email.');
       });
     }
-
-    addParticipant();
-    <button onclick="testGoogleSheets()">Test Google Sheets</button>
-
   </script>
 </body>
 </html>
