--- a/index.html
+++ b/index.html
@@ -217,6 +217,18 @@ formData = {
         if (error) return console.error(error);
         document.getElementById('qr-code').innerHTML = `<img src="${url}" alt="QR Code Ticket">`;
         formData.qrImage = url;
+        // ✅ Google Sheets Integration
+          fetch("https://script.google.com/macros/s/AKfycbz8bV0Tzm6rqVkBfsmjt1RxHK8sp6P-_xk0xU87JAJajp0B0Dd4KNfduX0OZsgurVA/exec", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(formData)
+        })
+        .then(response => response.text())
+        .then(data => console.log("Google Sheets:", data))
+        .catch(err => console.error("Google Sheets Error:", err));
+        // ✅ Email notification
         sendTicketByEmail();
       });
     }
