--- a/index.html
+++ b/index.html
@@ -193,8 +193,17 @@
           }]
         });
       },
-      onApprove: function(data, actions) {
-        return actions.order.capture().then(function(details) {
+      fetch("https://script.google.com/macros/s/AKfycbxwbFnfi_pZcduAxwOuYEtqiDkyIua6dViBBK6LNoem6MzzwaqWYOY_vLjWf8Eu1ICxpQ/exec", {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify(formData)
+})
+.then(response => response.json())
+.then(data => console.log('Google Sheet response:', data))
+.catch(error => console.error('Error sending to Google Sheet:', error));
+
+      // onApprove: function(data, actions) {
+        // return actions.order.capture().then(function(details) {
           generateQRCode();
         });
       }
